[gd_scene load_steps=5 format=3 uid="uid://dnbjgwbrkknnu"]

[ext_resource type="Texture2D" uid="uid://cneke8qquthlo" path="res://Graphics/Gimmicks/ConveyorBelt.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/ConveyorBelt.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://40gaffyx3p7u" path="res://Graphics/Gimmicks/ConveyorBelt_Middle.png" id="2_jtbch"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(32, 31)

[node name="ConveyorBelt" type="StaticBody2D"]
collision_layer = 8192
collision_mask = 8192
constant_linear_velocity = Vector2(-30, 0)
script = ExtResource("2")
speed = 30
length = 11
reverse = true
middlesection = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(12, 1)
shape = SubResource("3")

[node name="MiddlePiece" type="Sprite2D" parent="."]
texture = ExtResource("1")
vframes = 9
frame = 5
region_enabled = true
region_rect = Rect2(0, 0, 352, 288)

[node name="LeftCog" type="Sprite2D" parent="."]
position = Vector2(-176, 0)
texture = ExtResource("1")
vframes = 9
frame = 3
region_enabled = true
region_rect = Rect2(0, 0, 48, 288)

[node name="RightCog" type="Sprite2D" parent="."]
position = Vector2(176, 0)
texture = ExtResource("1")
vframes = 9
frame = 4
region_enabled = true
region_rect = Rect2(0, 0, 48, 288)

[node name="MiddleCogs" type="Node2D" parent="."]

[node name="MiddleCog" type="Sprite2D" parent="MiddleCogs"]
position = Vector2(-30.25, 0)
texture = ExtResource("2_jtbch")
hframes = 3
frame = 1

[node name="MiddleCog2" type="Sprite2D" parent="MiddleCogs"]
position = Vector2(30.25, 0)
texture = ExtResource("2_jtbch")
hframes = 3
frame = 1

[node name="MiddleCog3" type="Sprite2D" parent="MiddleCogs"]
position = Vector2(96.25, 0)
texture = ExtResource("2_jtbch")
hframes = 3
frame = 1

[node name="MiddleCog4" type="Sprite2D" parent="MiddleCogs"]
position = Vector2(-96.25, 0)
texture = ExtResource("2_jtbch")
hframes = 3
frame = 1
region_rect = Rect2(0, 0, 0, 288)
